# hello_world

./: .gitignore  CMakeLists.txt  LICENSE  configure.ac  meson.build
inc/: version.h
lib/: CMakeLists.txt  meson.build
lib/inc/: world.h
lib/src/: world.c
src/: helloworld  main.c  version.c
